--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "a3": "file:",
     "express": "^4.21.1",
-    "http": "^0.0.1-security"
+    "http": "^0.0.1-security",
+    "multer": "^1.4.5-lts.1"
   }
 }
