--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "A3 project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "a3": "file:",
+    "aws-sdk": "^2.1691.0",
     "express": "^4.21.1",
     "http": "^0.0.1-security",
     "multer": "^1.4.5-lts.1"
